k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpilog
  namespace: team401mcp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wpilog
  template:
    metadata:
      labels:
        app: wpilog
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: dufs
          image: sigoden/dufs
          args:
            - "-c"
            - "/config/dufs-config.yaml"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: logs
              mountPath: /logs
            - name: dufs-config
              mountPath: /config
              readOnly: true

        - name: wpilog-mcp
          image: container.cs.vt.edu/gback/registry/wpilog-mcp
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /logs

        - name: wpilog-stats
          image: container.cs.vt.edu/gback/registry/wpilog-stats
          ports:
            - containerPort: 8001
              name: stats-http
          volumeMounts:
            - name: logs
              mountPath: /logs
              readOnly: true

      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: wpilog-logs
        - name: dufs-config
          secret:
            secretName: wpilog-secrets
            items:
              - key: dufs-config.yaml
                path: dufs-config.yaml
