k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpilog
  namespace: team401mcp
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0,::/0"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  rules:
    - host: team401.endeavour.cs.vt.edu
      http:
        paths:
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: wpilog-dufs
                port:
                  number: 80
          - path: /wpilogmcp
            pathType: Prefix
            backend:
              service:
                name: wpilog-mcp
                port:
                  number: 80
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: wpilog-stats
                port:
                  number: 80
